home1 Top completed

--- a/index.html
+++ b/index.html
@@ -5,10 +5,83 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@900&family=PT+Sans:wght@400;700&display=swap" rel="stylesheet">
+    
     <title>Document</title>
 </head>
 <body>
-    <h1>This is test for HTML_assignment</h1>
+    <div class="sidePadding" style="padding-top: 30px; padding-bottom: 30px; background-color: #ECECEC;">
+        <div class="home1">
+            <div class="home1Top">
+
+                <div style="width: calc(100%-266px)">
+                    <h1 class="home1Heading">Let’s Begin Here: Approaching Craft in Fiction Through Character</h1>
+                    <div class="home1BtnBox">
+                        <button class="btn subtext" style="border: 1px solid #434343; background-color: #fff;">
+                            <span class="iconBox" style="margin: auto 5px auto 0;">
+                                <i class="fa-solid fa-user fa-xs" style="color: #fff;"></i>
+                            </span>
+                            David William Hill
+                        </button>
+                        <button class="btn subtext" style="background: linear-gradient(0deg, rgba(255, 255, 255, 0.8), rgba(255, 255, 255, 0.8)), #DC3636;">Fiction</button>
+                        <button class="btn subtext" style="background: linear-gradient(0deg, rgba(255, 255, 255, 0.6), rgba(255, 255, 255, 0.6)), #434343;">Advanced</button>
+                    </div>
+                </div>
+
+                <div style="min-width: 265px;">
+                    <div class="home1Right">
+                        <div class="home1RightSub">
+                            <div style="border-right: 0.5px solid #434343;">
+                                <p class="subHeading" style="margin-bottom: 8px;">$200</p>
+                                <p class="subtext" style="font-size: 16px">Member</p>
+                            </div>
+                            <div>
+                                <p class="subHeading" style="margin-bottom: 8px;">$259</p>
+                                <p class="subtext" style="font-size: 16px">Non-Member</p>
+                            </div>
+                        </div>
+                        <button>Sign Up</button>
+                    </div>
+                    <div 
+                    style="border: 1px solid #434343;
+                        border-radius: 8px;
+                        padding: 8px 16px;
+                        margin-top: 24px;"
+                    >
+                        <p class="subtext" style="font-weight: 700;">Apply for Reduced-Rate Spot</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="home1bottom">
+                <div>
+                    <i class="fa-solid fa-calendar-days fa-lg icon" ></i>
+                    <p class="subtext"><span style="color: #000; font-weight: 700;">Jan 05 - Feb 15  </span><span style="color: #DC3636">(5 Wednesdays)</span><br />
+                     10:00am - 4:00pm (PST)</p>
+                </div>
+                <div>
+                    <i class="fa-solid fa-location-dot fa-lg icon"></i>
+                    <p class="subtext">2042 Balboa St., <br />
+                        San Francisco, CA 94121</p>
+                </div>
+                <div style="border: 0">
+                    <i class="fa-solid fa-clock fa-lg icon" ></i>
+                    <p class="subtext"><span style="font-weight: 700;">Registration deadline: </span><br />
+                        May 07 at 10:30am (PST)</p>
+                </div>
+            </div>
+        </div>
+
+        <div class="home2"></div>
+
+        <div class="home3"></div>
+
+    </div>
 </body>
+
 <script src="index.js"></script>
+<script src="https://kit.fontawesome.com/2dac633212.js" crossorigin="anonymous"></script>
 </html>
