home2 right completed

--- a/index.html
+++ b/index.html
@@ -122,7 +122,13 @@
                     </div>
                 </div>
             </div>
-            <div class="home2Right"></div>
+            <div class="home2Right">
+                <div class="imageContainer">
+                    <img src="image/profilePhoto.jpg" />
+                </div>
+                <p class="subtext" style="margin-bottom: 32px;"><strong style="color: #00ACB4;">John Doe ,</strong> MFA, writes fiction and nonfiction with a special emphasis on the power of place. Her work has been anthologized and published in venues such as Atlas Obscura, The Los Angeles Times, The Sun, and Best Women’s Travel Writing. She loves to see her students surprise and delight themselves (and others!), whether she’s teaching at City University of New York, the San Francisco Women’s Jail, or The Writing Salon. After many years of living abroad (from Oaxaca to Quito to San Jose, Costa Rica), she now lives in San Francisco. She is also the author of Living Abroad in Costa Rica.</p>
+                <button class="btn subtext" style="background: #fff; color: #DC3636; border: 1px solid #DC3636;">See John’s Reviews</button>
+            </div>
         </div>
 
         <div class="home3">
