--- a/index.html
+++ b/index.html
@@ -132,7 +132,16 @@
         </div>
 
         <div class="home3">
-
+            <div class="home3Container">
+                <div style="margin: auto 30px">
+                    <img src="image/home2Icon1.svg" alt="icon1" />
+                </div>
+                <div>
+                    <p class="subtext">Erin was a wonderful teacher. She was personable, kind, organized, and great with facilitating group discussion.
+                        <br /><strong>Katy L.</strong></p>
+                </div>
+                <div  style="margin: auto 30px"><img src="image/home2Icon2.svg" alt="icon2" /></div>
+            </div>
         </div>
 
     </div>
