--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <div class="home1">
             <div class="home1Top">
 
-                <div style="width: calc(100%-266px)">
+                <div style="padding-right: 20px;">
                     <h1 class="home1Heading">Let’s Begin Here: Approaching Craft in Fiction Through Character</h1>
                     <div class="home1BtnBox">
                         <button class="btn subtext" style="border: 1px solid #434343; background-color: #fff;">
@@ -37,10 +37,12 @@
                             </span>
                             David William Hill
                         </button>
-                        <button class="btn subtext"
-                            style="background: linear-gradient(0deg, rgba(255, 255, 255, 0.8), rgba(255, 255, 255, 0.8)), #DC3636;">Fiction</button>
-                        <button class="btn subtext"
-                            style="background: linear-gradient(0deg, rgba(255, 255, 255, 0.6), rgba(255, 255, 255, 0.6)), #434343;">Advanced</button>
+                        <div class="home1BtnBoxRigh">
+                            <button class="btn subtext"
+                                style="background: linear-gradient(0deg, rgba(255, 255, 255, 0.8), rgba(255, 255, 255, 0.8)), #DC3636;">Fiction</button>
+                            <button class="btn subtext"
+                                style="background: linear-gradient(0deg, rgba(255, 255, 255, 0.6), rgba(255, 255, 255, 0.6)), #434343;">Advanced</button>
+                        </div>
                     </div>
                 </div>
 
@@ -67,22 +69,24 @@
                 </div>
             </div>
 
-            <div class="home1bottom">
-                <div>
-                    <i class="fa-solid fa-calendar-days fa-lg icon"></i>
-                    <p class="subtext"><span style="color: #000; font-weight: 700;">Jan 05 - Feb 15 </span><span
-                            style="color: #DC3636">(5 Wednesdays)</span><br />
-                        10:00am - 4:00pm (PST)</p>
-                </div>
-                <div>
-                    <i class="fa-solid fa-location-dot fa-lg icon"></i>
-                    <p class="subtext">2042 Balboa St., <br />
-                        San Francisco, CA 94121</p>
-                </div>
-                <div style="border: 0">
-                    <i class="fa-solid fa-clock fa-lg icon"></i>
-                    <p class="subtext"><span style="font-weight: 700;">Registration deadline: </span><br />
-                        May 07 at 10:30am (PST)</p>
+            <div class="home1bottomContainer">
+                <div class="home1bottom">
+                    <div>
+                        <i class="fa-solid fa-calendar-days fa-lg icon"></i>
+                        <p class="subtext"><span style="color: #000; font-weight: 700;">Jan 05 - Feb 15 </span><span
+                                style="color: #DC3636">(5 Wednesdays)</span><br />
+                            10:00am - 4:00pm (PST)</p>
+                    </div>
+                    <div>
+                        <i class="fa-solid fa-location-dot fa-lg icon"></i>
+                        <p class="subtext">2042 Balboa St., <br />
+                            San Francisco, CA 94121</p>
+                    </div>
+                    <div style="border: 0">
+                        <i class="fa-solid fa-clock fa-lg icon"></i>
+                        <p class="subtext"><span style="font-weight: 700;">Registration deadline: </span><br />
+                            May 07 at 10:30am (PST)</p>
+                    </div>
                 </div>
             </div>
         </div>
@@ -145,6 +149,7 @@
                     </div>
                 </div>
             </div>
+            
             <div class="home2Right">
                 <div class="imageContainer">
                     <img src="image/profilePhoto.jpg" />
@@ -163,7 +168,7 @@
 
         <div class="home2Bottom">
             <div class="home2BottomContainer">
-                <div style="margin: auto 30px">
+                <div class="home2IconImgContainer">
                     <img src="image/home2Icon1.svg" alt="icon1" />
                 </div>
                 <div>
@@ -172,7 +177,7 @@
                         <br /><strong>Katy L.</strong>
                     </p>
                 </div>
-                <div style="margin: auto 30px"><img src="image/home2Icon2.svg" alt="icon2" /></div>
+                <div class="home2IconImgContainer"><img src="image/home2Icon2.svg" alt="icon2" /></div>
             </div>
         </div>
 
@@ -180,7 +185,7 @@
         <!-- ******************************* home3 **************************** -->
 
         <div class="home3">
-            <h3 class="subHeading" style="margin-bottom: 20px; font-weight: 900; font-family: 'Montserrat';">Similar Classes</h3>
+            <h3 class="subHeading" style="font-weight: 900; font-family: 'Montserrat';">Similar Classes</h3>
             <div class="home3Container">
                 <div>
                     <p class="subtext">The Art of the Prose Sentence: Challenging Your Sentences to Do More</p>
@@ -213,7 +218,7 @@
         </div>
         <div style="padding-top: 40px; border-top: 0.8px solid #828282;">
             <h3 class="subHeading" style="margin-bottom: 20px; font-weight: 900; font-family: 'Montserrat';">Cancelation Policy</h3>
-            <p class="subtext" style="margin-bottom: 32px;">In the event of an emergency, we may consider a refund or credit, whether partial or full. We review these requests on a case-by-case basis, and we ask that you notify us as near as possible to the start date for the class. Please read our policy details before requesting a refund.</p>
+            <p class="subtext" >In the event of an emergency, we may consider a refund or credit, whether partial or full. We review these requests on a case-by-case basis, and we ask that you notify us as near as possible to the start date for the class. Please read our policy details before requesting a refund.</p>
         </div>
         <div class="CancelationContainer">
             <p class="subtext"><span style="color: #DC3636">10 days or more </span><br />
