--- a/index.html
+++ b/index.html
@@ -239,7 +239,17 @@
     <div class="footer sidePadding">
         <div class="footerTop">
             <div>
-                <p class="footerLinkContainer"><a href="#">Who We Are</a> <span style="margin: 0 10px">/</span> <a href="#">Gift A Class </a> <span style="margin: 0 10px">/</span>  <a href="#">Membership</a> <span style="margin: 0 10px">/</span>  <a href="#"> Refund Policy </a> <span style="margin: 0 10px">/</span>  <a href="#">FAQ</a> </p>
+                <p class="footerLinkContainer">
+                    <a href="#">Who We Are</a> 
+                    <span style="margin: 0 10px">/</span> 
+                    <a href="#">Gift A Class </a> 
+                    <span style="margin: 0 10px">/</span>  
+                    <a href="#">Membership</a> 
+                    <span style="margin: 0 10px">/</span>  
+                    <a href="#"> Refund Policy </a> 
+                    <span style="margin: 0 10px">/</span>  
+                    <a href="#">FAQ</a> 
+                </p>
             </div>
             <div class="footerTopRight">
                 <p class="footerSubHeading">
@@ -256,7 +266,10 @@
             <div>
                 <p class="subHeading" style="font-size: 21px; color: #fff">Contact</p>
                 <p class="subHeading" style="font-size: 14px; color: #F39B4E;">2035 Sunset Lake Road, Suite B-2, Newark, Delaware, 19702</p>
-                <p class="subHeading" style="font-size: 14px; color: #fff"><span style="color: #F39B4E;">Office Phone:</span> (510) 987-6543     <span style="color: #F39B4E; margin-left: 20px;">Email:</span> hello@wisdmlabs.com </p>
+                <p class="subHeading" style="font-size: 14px; color: #fff">
+                    <span style="display: inline-block; margin-right: 20px;"><span style="color: #F39B4E;">Office Phone:</span> (510) 987-6543 </span>    
+                    <span style="display: inline-block;"><span style="color: #F39B4E;">Email:</span> hello@wisdmlabs.com </span>
+                </p>
             </div>
             <div class="footerIconsContainer">
                 <button class="iconBtn" style="margin: auto 5px auto 0; border: 2px solid #F39B4E;">
