--- a/index.html
+++ b/index.html
@@ -9,13 +9,48 @@
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@900&family=PT+Sans:wght@400;700&display=swap"
-        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter&family=Montserrat:wght@900&family=PT+Sans:wght@400;700&display=swap" rel="stylesheet">
 
     <title>Document</title>
 </head>
 
 <body>
+
+    <div class="navbar">
+        <div class="logo">
+            <p>Logo</p>
+        </div>
+        <div class="navbarRight" >
+            <div class="navbarRightTop">
+                <p >
+                    <i class="fa-solid fa-magnifying-glass fa-lg " style="margin: 0 8px;"></i>
+                    <input type="text" placeholder="Search" class="navbarSearchInput" /> 
+                </p>
+                <p>
+                    <span class="iconBox" style="background-color: #000; margin: 0 8px;" >
+                        <i class="fa-solid fa-user fa-sm" style="color: #fff;"></i>
+                    </span>
+                    <span>Sign in</span>
+                </p>
+                <p>
+                    <i class="fa-solid fa-bag-shopping fa-lg"  style="margin: 0 8px;"></i>
+                    <span>(0)</span>
+                </p>
+            </div>
+            <div class="navbarRightBottom" id="mynav">
+                <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+                    <i class="fa fa-bars fa-lg"></i>
+                </a>
+                <a href="#" class="subtext navLink">Classes</a>
+                <a href="#" class="subtext navLink">Programs & Events</a>
+                <a href="#" class="subtext navLink">Blogs</a>
+                <a href="#" class="subtext navLink">About</a>
+                <a href="#" class="subtext navLink">Get Involved</a>
+                <button class="btn subtext navLink" style="background-color: #DC3636; color: #fff;">Find a Class</button>
+            </div>
+        </div>
+    </div>
+
     <!-- *************************home ************************* -->
     <!-- *************************home ************************* -->
     <!-- *************************home ************************* -->
